fix article right spacing issue

--- a/assets/less/general.less
+++ b/assets/less/general.less
@@ -19,7 +19,7 @@ body {
 }
 
 .wrap .content.row {
-	width: 100%;
+	width: auto;
 }
 
 .page-header{
@@ -75,7 +75,7 @@ figure.alignnone { margin-left: 0; margin-right: 0; }
 //* MOBILE
 
 /* Small devices (tablets, 768px and up) */
-@media (min-width: 768px) { 
+@media (min-width: 768px) {
 	html.js {
 		//margin-top: 32px !important;
 	}
@@ -85,8 +85,8 @@ figure.alignnone { margin-left: 0; margin-right: 0; }
 	}
 }
 /* Medium devices (desktops, 992px and up) */
-@media (min-width: 992px) { 
+@media (min-width: 992px) {
 }
 /* Large devices (large desktops, 1200px and up) */
-@media (min-width: 1200px) { 
+@media (min-width: 1200px) {
 }
